Created recipe dir and created GajarHalwa.html and added heading it it, added its link in index.html

--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
     <body>
 
         <h1> Odin Recipes </h1>
+        
+        <a href="recipes/GajarHalwa.html"> Gajar Halwa </a>
+
+    </body>
 
 </html>
