changed ref and target setting in link of gajar halwa

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <h1> Odin Recipes </h1>
         
-        <a href="recipes/GajarHalwa.html"> Gajar Halwa </a>
+        <a href="recipes/GajarHalwa.html" target="_blank" ref="noreferrer"> Gajar Halwa </a>
 
     </body>
 
