--- a/recipes/GajarHalwa.html
+++ b/recipes/GajarHalwa.html
@@ -29,6 +29,20 @@
 
         </p>
 
+        <h3> Ingredients </h3>
+        <p>
+            <ul>
+                <li> 2 tablespoons ghee or oil </li>
+                <li> 2 pounds carrots, grated </li>
+                <li> 1 ½ quarts whole milk </li>
+                <li> 2 cups white sugar </li>
+                <li> ½ cup raisins or sultanas </li>
+                <li> 1 ½ teaspoons ground cardamom </li>
+                <li> 1 pinch saffron threads </li>
+                <li> 8 tablespoons chopped pistachio nuts </li>
+            </ul>
+        </p>
+
     </body>
 
 </html>
