Added image, desc to alooparatha.html, and updated gajarhalwa.html, added diet filed in desc

--- a/recipes/gajarhalwa.html
+++ b/recipes/gajarhalwa.html
@@ -25,6 +25,7 @@
                 <li> Cook Time: 1 hr 30 mins </li>
                 <li> Total Time: 1hr 40 mins </li>
                 <li> Serving: 8 </li>
+                <li> Diet: Vegetarian, Gluten free </li>
             </ul>
 
         </p>
