--- a/recipes/alooparatha.html
+++ b/recipes/alooparatha.html
@@ -28,6 +28,51 @@
                 
             </ul>
         </p>
+        
+        <h3> Ingredients </h3>
+        <p> For Dough
+            <ul>
+                <li>300g/10½oz chapati flour (atta) or wholemeal flour, plus extra for dusting </li>
+                <li> pinch of salt </li>
+                <li> 13 tbsp ghee, or vegetable oil </li>
+            </ul>
+            For potato filling
+            <ul>
+                <li> 350g/12oz potatoes, peeled and diced </li>
+                <li> 6cm/2½in ginger, coarsely grated </li>
+                <li> 1 green bird's-eye chilli, finely chopped </li>
+                <li> 2 tbsp finely chopped coriander leaves </li>
+                <li> 3 tsp chaat masala </li>
+                <li> ½ tsp mild chilli powder </li>
+                <li> salt, to taste </li>
+                <li> butter or ghee, for frying </li>
+            </ul>
+        </p>
+        <h4> Steps: </h4>
+        <ol>
+            <li> To make the dough, combine the flour, salt, and ghee (or oil) in a separate bowl. 
+                Add 200–220ml/7–8fl oz water a little at a time until the dough comes together. 
+                Knead to a smooth dough then rest for the dough for 15–20 minutes at room temperature.
+            </li>
+
+            <li>
+                To prepare your filling, boil the potatoes until cooked through, then mash them. 
+                Combine with the rest of the filling ingredients, except the ghee, in a large mixing bowl. Mix everything together and set aside.
+            </li>
+
+            <li>
+                Heat a frying pan over a medium heat. Divide the dough into 6 portions. Flatten one portion into a 7cm/2½in disc and put 
+                appoximately a sixth of the filling in the centre. Pull the edges together to enclose the filling, then seal the edge with a little water and flatten gently. 
+                Dust the stuffed paratha with flour and gently roll out to a 15cm/5in circle. Don’t make it too thin or the filling will spill out!
+            </li>
+
+            <li>
+                Add a teaspoon of butter or ghee to the hot pan and add the paratha. Cook for 2 minutes on one side, using a 
+                spoon to spread butter (or ghee) on the top of the paratha at the same time. Now flip it over and repeat on the other side. Turn the paratha again and cook for another minute until you see brown speckles appear on the underside. 
+                Wrap the paratha in kitchen foil to keep warm while you make the remaining parathas.
+            </li>
+
+        </ol>
     </body>
 
 </html>
