edited link, added diff paragraph for each link to differentiate them better

--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
 
         <h1> Odin Recipes </h1>
         
-        <a href="recipes/gajarhalwa.html" target="_blank" ref="noreferrer"> Gajar Halwa </a>
-        <a href="recipes/alooparatha.html" target="_blank" ref="noreferrer"> Aloo Paratha </a>
-        <a href="recipes/chaat.html" target="_blank" ref="noreferrer"> Chaat </a>
-        <a href="recipes/masaladosa.html" target="_blank" ref="noreferrer"> Masala Dosa </a>
-        <a href="recipes/rasmalai.html" target="_blank" ref="noreferrer"> Ras Malai </a>    
+        <p> <a href="recipes/gajarhalwa.html" target="_blank" ref="noreferrer"> Gajar Halwa </a> </p>
+        <p> <a href="recipes/alooparatha.html" target="_blank" ref="noreferrer"> Aloo Paratha </a> </p>
+        <p> <a href="recipes/chaat.html" target="_blank" ref="noreferrer"> Chaat </a> </p>
+        <p> <a href="recipes/masaladosa.html" target="_blank" ref="noreferrer"> Masala Dosa </a> </p>
+        <p> <a href="recipes/rasmalai.html" target="_blank" ref="noreferrer"> Ras Malai </a> </p>
+            
     </body>
 
 </html>
