--- a/recipes/masaladosa.html
+++ b/recipes/masaladosa.html
@@ -71,7 +71,36 @@
             </ul>
         </p>
         
-        
+        <h4> Steps </h4>
+        <p>
+            <ol>
+                <li> 
+                    To make the filling, cook the potatoes in a large saucepan of lightly salted boiling water for 8–10 minutes or until tender. 
+                    Drain and set aside.
+                </li>
+                <li> 
+                    Heat the oil in a large frying pan and add the spices. Stir-fry for 2 minutes, then add the potatoes. 
+                     Season with salt and stir-fry for 4–5 minutes until well coated. 
+                     Remove from the heat and add the lemon juice and chopped coriander. Set aside.
+                </li>
+                <li>
+                    To make the dosas, whisk the flours and baking powder together with 300ml/10fl oz water in a large jug to make a runny batter 
+                    (it should be thinner than a pancake batter so add more water if needed). 
+                    It should be quite runny because you need to spread it fairly thinly
+                </li>
+                <li>
+                    Lightly grease a non-stick frying pan with the oil and wipe any excess with kitchen paper. 
+                    Place over a medium–high heat, then add a ladleful of the batter and swirl to coat the base of the pain fairly thinly, 
+                    like a crêpe. Cook for 3–4 minutes until the top is set and the bottom is very lightly golden. Remove from the pan and place on a plate. 
+                    Spoon some of the filling down the centre and fold over. 
+                    Repeat with the remaining batter and filling until there are eight filled dosas.
+                </li>
+                <li>
+                    To make the chutney, blitz the coriander, mint, sugar and coconut yoghurt with some pepper in a food processor or blender until well blended. 
+                    Add the lime juice just before serving. Serve the filled dosas with the chutney.
+                </li>
+            </ol>
+        </p>
     </body>
 
 </html>
