changed h4 and reformatted code

--- a/recipes/chaat.html
+++ b/recipes/chaat.html
@@ -1,107 +1,61 @@
 <!DOCTYPE html>
-
 <html lang="en">
-    
-    <head>
-        <meta charset="UTF-8">
-    </head>
-
-    <body>
-        <h1> Chaat </h1>
-        <img src="https://ichef.bbci.co.uk/food/ic/food_16x9_1600/recipes/aloo_chaat_39985_16x9.jpg" 
-        alt="indian spicy dish, made with potato, cruchies, sev, curd and spices">
-
-        <h2>
-            Description
-        </h2>
-        <p>
-            Aloo chaat is a combination of different flavours all in one dish. It reminds me of childhood with my friends and is a great sharing dish. Bhujia is a crisp fried chickpea noodle that adds extra crunch - don't skip it!
-        </p>
-        
-            <ul>
-                <li> Preparation Time: 20 mins </li>
-                <li> Cook Time: 1 hr mins </li>
-                <li> Total Time: 1hr 20 mins </li>
-                <li> Serving: 4 </li>
-                <li> Diet: Vegetarian </li>
-            </ul>
-
-        </p>
-
-        <h3> Ingredients </h3>
-        <p>
-        For Aloo Chat
-        <ul>
-            <li> 600g/1lb 5oz potatoes, peeled and cut into small chunks
-            </li>
-            <li> 1 tsp ground cumin
-            </li>
-            <li> 1 tsp ground coriander
-            </li>
-            <li> 1 tsp fennel seeds, crushed
-            </li>
-            <li> 2 tsp chaat masala
-            </li>
-            <li> 1 tsp red chilli powder
-            </li>
-            <li>15g/½oz fresh coriander, chopped
-            </li>
-            <li> 1 pomegranate, seeds separated
-            </li>
-            <li> 1–2 green chillies, chopped, seeds in
-            </li>
-            <li> ½ lemon, juice only
-            </li>
-            <li> 60g/2¼oz Greek-style yoghurt
-            </li>
-            <li> 1 tsp caster sugar
-            </li>
-            <li> 1 tsp cumin seeds, toasted and crushed
-            </li>
-            <li> 2 tbsp milk
-            </li>
-            <li> 6 tsp tamarind chutney
-            </li>
-            <li>40g/1½oz bhujia
-            </li>
-            <li> salt</li>
-        </ul>
-        For the mint and coriander chutney
-        <ul>
-            <li> 1 large garlic clove, roughly chopped
-            </li>
-            <li> 40g/1½oz shallots, peeled and diced
-            </li>
-            <li> 1–2 green chillies, roughly chopped, seeds in
-            </li>
-            <li> 10g/⅓oz mint leaves
-            </li>
-            <li> 10g/⅓oz fresh coriander, roughly chopped with stems
-            </li>
-            <li> 1 tsp ground cumin
-            </li>
-            <li>½ tsp salt
-            </li>
-            <li>1 tsp chaat masala
-            </li>
-            <li> ½ lemon, juice only
-            </li>
-            <li> 4 tsp olive oil
-            </li>
-            <li>2 tsp Greek-style yoghurt
-            </li>
-        </ul>
-
+  <head>
+    <meta charset="UTF-8">
+  </head>
+  <body>
+    <h1> Chaat </h1>
+    <img src="https://ichef.bbci.co.uk/food/ic/food_16x9_1600/recipes/aloo_chaat_39985_16x9.jpg" alt="indian spicy dish, made with potato, cruchies, sev, curd and spices">
+    <h2> Description </h2>
+    <p> Aloo chaat is a combination of different flavours all in one dish. It reminds me of childhood with my friends and is a great sharing dish. Bhujia is a crisp fried chickpea noodle that adds extra crunch - don't skip it! </p>
+    <ul>
+      <li> Preparation Time: 20 mins </li>
+      <li> Cook Time: 1 hr mins </li>
+      <li> Total Time: 1hr 20 mins </li>
+      <li> Serving: 4 </li>
+      <li> Diet: Vegetarian </li>
+    </ul>
     </p>
-
-    <h4>
-        <ol>
-            <li> To make the aloo chaat, cook the potatoes in a saucepan of lightly salted boiling water until just cooked through. Drain and leave to cool. Put the cooled potatoes, all the spices (except the cumin seeds), 10g/⅓oz fresh coriander and 35g/1¼oz pomegranate seeds in a large bowl with the chillies, lemon juice and ½ tsp salt. Mix together and set aside.</li>
-            <li> Put the yoghurt, sugar, cumin seeds and milk in a bowl and whisk together.</li>
-            <li> To make the mint and coriander chutney, place all of the ingredients together with 20–30ml/¾–1fl oz water in a food processor or blender and blend until smooth.</li>
-            <li> Place the potato mixture on a large serving plate. Spoon the yoghurt mixture over the potatoes. Top with 4 teaspoons of tamarind chutney and 4 teaspoons of mint and coriander chutney. Sprinkle with the bhujia, remaining pomegranate seeds and fresh coriander, then spoon over 1 teaspoon of mint and coriander chutney and 2 teaspoons of tamarind chutney. Serve for everyone to share.</li>
-        </ol>
-    </h4>
-    </body>
-
+    <h3> Ingredients </h3>
+    <p> For Aloo Chat
+    <ul>
+      <li> 600g/1lb 5oz potatoes, peeled and cut into small chunks </li>
+      <li> 1 tsp ground cumin </li>
+      <li> 1 tsp ground coriander </li>
+      <li> 1 tsp fennel seeds, crushed </li>
+      <li> 2 tsp chaat masala </li>
+      <li> 1 tsp red chilli powder </li>
+      <li>15g/½oz fresh coriander, chopped </li>
+      <li> 1 pomegranate, seeds separated </li>
+      <li> 1–2 green chillies, chopped, seeds in </li>
+      <li> ½ lemon, juice only </li>
+      <li> 60g/2¼oz Greek-style yoghurt </li>
+      <li> 1 tsp caster sugar </li>
+      <li> 1 tsp cumin seeds, toasted and crushed </li>
+      <li> 2 tbsp milk </li>
+      <li> 6 tsp tamarind chutney </li>
+      <li>40g/1½oz bhujia </li>
+      <li> salt</li>
+    </ul> For the mint and coriander chutney <ul>
+      <li> 1 large garlic clove, roughly chopped </li>
+      <li> 40g/1½oz shallots, peeled and diced </li>
+      <li> 1–2 green chillies, roughly chopped, seeds in </li>
+      <li> 10g/⅓oz mint leaves </li>
+      <li> 10g/⅓oz fresh coriander, roughly chopped with stems </li>
+      <li> 1 tsp ground cumin </li>
+      <li>½ tsp salt </li>
+      <li>1 tsp chaat masala </li>
+      <li> ½ lemon, juice only </li>
+      <li> 4 tsp olive oil </li>
+      <li>2 tsp Greek-style yoghurt </li>
+    </ul>
+    </p>
+    <h4> Steps </h4>
+    <ol>
+      <li> To make the aloo chaat, cook the potatoes in a saucepan of lightly salted boiling water until just cooked through. Drain and leave to cool. Put the cooled potatoes, all the spices (except the cumin seeds), 10g/⅓oz fresh coriander and 35g/1¼oz pomegranate seeds in a large bowl with the chillies, lemon juice and ½ tsp salt. Mix together and set aside.</li>
+      <li> Put the yoghurt, sugar, cumin seeds and milk in a bowl and whisk together.</li>
+      <li> To make the mint and coriander chutney, place all of the ingredients together with 20–30ml/¾–1fl oz water in a food processor or blender and blend until smooth.</li>
+      <li> Place the potato mixture on a large serving plate. Spoon the yoghurt mixture over the potatoes. Top with 4 teaspoons of tamarind chutney and 4 teaspoons of mint and coriander chutney. Sprinkle with the bhujia, remaining pomegranate seeds and fresh coriander, then spoon over 1 teaspoon of mint and coriander chutney and 2 teaspoons of tamarind chutney. Serve for everyone to share.</li>
+    </ol>
+  </body>
 </html>
